Naftah - added benchmarks - setup